# blitz

./: .gitignore  Cargo.toml
.github/: copilot-instructions.md
.github/instructions/: copilot-instructions.md.instructions.md
apps/BlitzTestApp/: BlitzTestApp.sln
apps/BlitzTestApp/Blitz.WinRTWrapper/: Blitz.WinRTWrapper.vcxproj  Blitz.WinRTWrapper.vcxproj.filters  BlitzView.cpp  BlitzView.h  BlitzView.idl  pch.h  readme.txt
apps/BlitzTestApp/Blitz.WinRTWrapper/Themes/: Generic.xaml
apps/BlitzTestApp/Blitz.WinRTWrapperProjection/: Blitz.WinRTWrapperProjection.csproj
apps/BlitzTestApp/Blitz.WinRTWrapperWinUIProjection/: Blitz.WinRTWrapperWinUIProjection.csproj
apps/BlitzTestApp/BlitzTestApp/: App.xaml  App.xaml.cs  BlitzTestApp.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
apps/BlitzTestApp/BlitzTestApp/Properties/: launchSettings.json
apps/BlitzWinRTTestApp/: .gitignore  BlitzWinRTTestApp.sln
apps/BlitzWinRTTestApp/Blitz/: Attacher.cpp  Attacher.h  Attacher.idl  Blitz.vcxproj  Blitz.vcxproj.filters  BlitzView.cpp  BlitzView.h  BlitzView.idl  NetworkFetcher.cpp  NetworkFetcher.h  NetworkFetcher.idl  pch.h  readme.txt
apps/BlitzWinRTTestApp/Blitz.WinUIProjection/: BlitzWinUIProjection.csproj
apps/BlitzWinRTTestApp/Blitz.WinUIProjection/Libraries/: BlitzWinUI.winmd
apps/BlitzWinRTTestApp/Blitz/Themes/: Generic.xaml
apps/BlitzWinRTTestApp/BlitzWinRTTestApp/: App.xaml  App.xaml.cs  BlitzWinRTTestApp.csproj  EmbeddedContent.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
apps/BlitzWinRTTestApp/BlitzWinRTTestApp/Assets/: demo.html  html-gallery.html
apps/BlitzWinRTTestApp/BlitzWinRTTestApp/Interop/: SwapChainAttacher.cs
apps/BlitzWinRTTestApp/BlitzWinRTTestApp/Properties/: launchSettings.json
apps/BlitzWinRTTestApp/BlitzWinRTTestApp/View/: CardsPage.xaml  CardsPage.xaml.cs  GalleryComparePage.xaml  GalleryComparePage.xaml.cs  SinglePage.xaml  SinglePage.xaml.cs
apps/BlitzWinRTTestApp/BlitzWinRTTestApp/ViewModel/: SettingsViewModel.cs
apps/BlitzWinRTTestApp/SwapChainAttacher/: Attacher.cpp  Attacher.h  Attacher.idl  BlitzView.cpp  BlitzView.h  BlitzView.idl  SwapChainAttacher.vcxproj  SwapChainAttacher.vcxproj.filters  readme.txt
apps/BlitzWinRTTestApp/SwapChainAttacher/Themes/: Generic.xaml
apps/MarkdownTest/: App.xaml  App.xaml.cs  CSprite.cs  D2DContext(Old).cs  D2DContext.cs  DXGI.cs  Direct2D.cs  GlobalStructures.cs  MainWindow.xaml  MainWindow.xaml.cs  MarkdownPage.xaml  MarkdownPage.xaml.cs  MarkdownTest.csproj  MarkdownTest.sln  Package.appxmanifest  WIC.cs  app.manifest
apps/MarkdownTest/Controls/: DevToolsPanel.xaml  DevToolsPanel.xaml.cs  LogViewer.xaml  LogViewer.xaml.cs  PerformanceMonitor.xaml  PerformanceMonitor.xaml.cs
apps/MarkdownTest/Libraries/: BlitzWinRT.winmd
apps/MarkdownTest/Logging/: D2DLogger.cs  LogEntry.cs  LogManager.cs
apps/MarkdownTest/Properties/: launchSettings.json
apps/readme/: Cargo.toml
apps/readme/src/: readme_application.rs
apps/wpt/: Cargo.toml
