[workspace]
members = [
  "packages/anyrender",
  "packages/anyrender_vello",
  "packages/anyrender_vello_cpu",
  "packages/anyrender_svg",
  "packages/blitz-traits",
  "packages/blitz-dom",
  "packages/blitz-html",
  "packages/blitz-net",
  "packages/blitz-paint",
  "packages/blitz-shell",
  "packages/blitz",
  "packages/blitz-winrt",
  "packages/dioxus-native",
  "packages/stylo_taffy",
  "apps/wpt",
  "apps/readme",
  "examples/counter",
]
exclude = ["sites"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Servo dependencies
style = { version = "0.3", package = "stylo" }
style_traits = { version = "0.3", package = "stylo_traits" }
style_config = { version = "0.3", package = "stylo_config" }
style_dom = { version = "0.3", package = "stylo_dom" }
selectors = { version = "0.28", package = "selectors" }

markup5ever = "0.16.1" # needs to match stylo web_atoms version
html5ever = "0.31" # needs to match stylo web_atoms version
xml5ever = "0.22" # needs to match stylo web_atoms version
euclid = "0.22"
string_cache = "0.8.7"
atomic_refcell = "0.1.13"
app_units = "0.7.5"
smallvec = "1"

# DioxusLabs dependencies
dioxus = { version = "0.6" }
dioxus-core = { version = "0.6" }
dioxus-html = { version = "0.6" }
dioxus-cli-config = { version = "0.6" }
dioxus-devtools = { version = "0.6" }
taffy = { version = "0.8", default-features = false, features = ["std", "flexbox", "grid", "block_layout", "content_size", "calc"] }

# Linebender + WGPU + SVG
color = "0.3"
peniko = "0.4"
kurbo = "0.11"
parley = { version = "0.4", default-features = false, features = ["std"] }
wgpu = "24"
softbuffer = "0.4"
vello = { version = "0.5", features = [ "wgpu" ] }
vello_cpu = { version = "0.0.1" }
vello_svg = { version = "0.6" }
usvg = "0.44.0"

# Windowing & Input
raw-window-handle = "0.6.0"
winit = { version = "0.30.2", features = ["rwh_06"] }
accesskit_winit = "0.23"
accesskit = "0.17"
muda = { version = "0.11.5", default-features = false }
arboard = { version = "3.4.1", default-features = false }
keyboard-types = "0.7"
cursor-icon = "1"

# IO & Networking
url = "2.5.0"
http = "1.1.0"
data-url = "0.3.1"
tokio = "1.42"
reqwest = "0.12"

# Media & Decoding
image = { version = "0.25", default-features = false }
woff = { version = "0.6", default-features = false }
woff2 = "0.3"
html-escape = "0.2.13"

# Other dependencies
rustc-hash = "1.1.0"
bytes = "1.7.1"
slab = "0.4.9"
tracing = "0.1.40"
futures-util = "0.3.30"
futures-intrusive = "0.5.0"
pollster = "0.4"
smol_str = "0.2"
bitflags = "2.8.0"
thiserror = "1.0.63"

# for building:
windows-link = { version = "0.1" }
windows-bindgen = { version = "0.60.0" }
windows-metadata = { version = "0.58.0" }
windows-core = { version="0.60.1" }
windows-targets = { version="0.53.0" }

[workspace.dependencies.windows]
version = "0.60.0"
features = [
    "Win32_Foundation",
    "Win32_System_WinRT",
]

[profile.production]
inherits = "release"
opt-level = 3
debug = false
lto = true
codegen-units = 1
strip = true
incremental = false

[profile.p2]
inherits = "production"
opt-level = 2

[profile.small]
inherits = "production"
opt-level = "z"
panic = "abort"

# This is a "virtual package"
# It is not meant to be published, but is used so "cargo run --example XYZ" works properly
[package]
name = "blitz-examples"
version = "0.0.1"
authors = ["Jonathan Kelley"]
edition = "2024"
description = "Top level crate for Blitz"
license = "MIT OR Apache-2.0"
keywords = ["dom", "ui", "gui", "react", "wasm"]
rust-version = "1.85.1"
publish = false

[dev-dependencies]
blitz-dom = { path = "./packages/blitz-dom" }
blitz-html = { path = "./packages/blitz-html" }
blitz-traits = { path = "./packages/blitz-traits" }
blitz-paint = { path = "./packages/blitz-paint" }
anyrender = { path = "./packages/anyrender" }
anyrender_vello = { path = "./packages/anyrender_vello" }
anyrender_vello_cpu = { path = "./packages/anyrender_vello_cpu" }
blitz-shell = { path = "./packages/blitz-shell" }
blitz-net = { path = "./packages/blitz-net" }
blitz = { path = "./packages/blitz", features = ["net"] }
dioxus-native = { path = "./packages/dioxus-native", features = ["tracing"] }
dioxus = { workspace = true }
euclid = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
image = { workspace = true }
png = "0.17"
env_logger = "0.11"
tracing-subscriber = "0.3"
blitz-winrt = { path = "./packages/blitz-winrt" }

# [patch.crates-io]
# [patch."https://github.com/dioxuslabs/taffy"]
# taffy = { path = "../taffy" }

# [patch."https://github.com/nicoburns/parley"]
# parley = { path = "../parley/parley" }
# fontique = { path = "../parley/fontique" }
